<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorYellow">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name_space"
        android:textColor="@color/colorBlack"
        android:textSize="60sp"
        android:gravity="center"
        android:padding="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.design.button.MaterialButton
                android:id="@+id/main_activity_button_camera"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:text="@string/button_camera"
                android:textColor="@color/colorBlack"
                style="@style/Widget.AppCompat.Button.Borderless"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="10dp"
                app:strokeColor="@color/colorBlack"
                app:strokeWidth="1dp"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/main_activity_button_library"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:text="@string/button_library"
                android:textColor="@color/colorBlack"
                style="@style/Widget.AppCompat.Button.Borderless"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="10dp"
                app:strokeColor="@color/colorBlack"
                app:strokeWidth="1dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <android.support.design.button.MaterialButton
                android:id="@+id/main_activity_button_picture_editor"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:text="@string/button_picture_editor"
                android:textColor="@color/colorBlack"
                style="@style/Widget.AppCompat.Button.Borderless"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="10dp"
                app:strokeColor="@color/colorBlack"
                app:strokeWidth="1dp"/>

            <android.support.design.button.MaterialButton
                android:id="@+id/main_activity_button_masks_creator"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:text="@string/button_masks_creator"
                android:textColor="@color/colorBlack"
                style="@style/Widget.AppCompat.Button.Borderless"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="10dp"
                app:strokeColor="@color/colorBlack"
                app:strokeWidth="1dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>